# friday

./: .coveragerc.ini  .dockerignore  .env.example  .env.yaml  .gitignore  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  action.yml  cli.py  deploy.sh  docker-compose.yml  enhanced_test.yaml  friday.rb  main.py  openapi.json  package-lock.json  prerequisites.sh  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: app_release.yml  build.yml  build_release.yml  docker-publish.yml  pydev.yml  pylint.yml  release.yml
Formula/: friday.rb
app/: .dockerignore  .eslintrc.json  .gitignore  ARCHITECTURE.md  DOCKER.md  Dockerfile  README.md  docker-compose.yml  forge.config.js  healthcheck.js  index.html  main.js  next.config.mjs  package-lock.json  package.json  renderer.js  styles.css  tailwind.config.js  tailwind.config.mjs  vite.config.ts
app/app/: globals.css  layout.tsx  page.tsx
app/app/api/health/: route.ts
app/components/: api-tester.tsx  file-uploader.tsx  index.ts  output-viewer.tsx  web-crawler.tsx
app/components/features/api-tester/: api-tester.tsx  index.ts
app/components/features/browser-tester/: browser-tester.tsx  index.ts
app/components/features/test-generator/: index.ts  test-generator.tsx
app/components/features/web-crawler/: index.ts  web-crawler.tsx
app/components/shared/: enhanced-error-display.tsx  file-uploader.tsx  index.ts  log-viewer.tsx  output-viewer.tsx  result-display.tsx  screenshot-gallery.tsx  session-management.tsx  toast-provider.tsx
app/components/ui/: button.tsx  card.tsx  input.tsx  tabs.tsx
app/config/: constants.ts
app/electron/: main.ts  tsconfig.json
app/hooks/: index.ts  use-api-error.ts  use-api.ts  use-file-upload.ts  use-websocket.ts
app/services/: api.ts
app/src/: App.css  App.tsx  index.css
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/src/: main.rs
app/src/components/: App.tsx  FileUploader.tsx  LogViewer.tsx  styles.css
app/src/components/apitest/: apiTester.tsx  perfTester.tsx
app/src/components/crawler/: webCrawler.tsx
app/src/components/generator/: testGenerator.tsx
app/src/css/: GlobalStyle.tsx  LogViewer.tsx  friday.tsx
app/src/services/: api.ts
app/src/types/: index.ts
app/src/utils/: index.ts
app/types/: api.ts  index.ts
connectors/: confluence_client.py  github_client.py  jira_client.py
deploy/: deploy.sh  readme.md
docs/: ARCHITECTURE_DIAGRAMS.md  BROWSER_TESTING.md  CLI_QUICK_START.md  CLI_REFERENCE.md  DEVELOPER_ONBOARDING.md  SYSTEM_ARCHITECTURE.md  WEBAPP_GUIDE.md  api-test-report.md  apis.md  mermaid_sequence_diagram.md  readme.md  sample_issue.md  sequence_diagram.md  test_cases.md
examples/: sample_browser.yaml  sample_browser_tests.yaml
friday/: main.py
friday/config/: config.py
friday/connectors/: confluence_client.py  github_client.py  jira_client.py
friday/services/: embeddings.py  prompt_builder.py  test_generator.py
friday/utils/: helpers.py
scripts/: mac_code_sign.sh  main.py  proxy_server.py  tt.py  update_version.py  win_code_sign.sh
services/: test_generator.py
src/friday/: cli.py  exceptions.py  health.py  logging_config.py
src/friday/agents/: api_agent.py  api_agents.py  perf_agent.py
src/friday/api/: app.py  logging.py  models.py
src/friday/api/routes/: api_test.py  browser_test.py  crawl.py  generate.py  perf_test.py  ws.py
src/friday/api/schemas/: api_test.py  browser_test.py  crawl.py  generate.py  perf_test.py
src/friday/config/: config.py
src/friday/llm/: agent.py  llm.py
src/friday/parsers/: grpc_parser.py  message.py  openapi_parser.py  service.py
src/friday/services/: browser_agent.py  browser_errors.py  browser_session_manager.py  crawler.py  embeddings.py  logger.py  parser.py  screenshot_manager.py  test_generator.py  yaml_scenarios.py
src/friday/utils/: helpers.py
test_data/chroma/: chroma.sqlite3
tests/: test_api_integration.py  test_chroma.py  test_cli.py  test_config.py  test_embeddings.py  test_github_client.py  test_jira_client.py  test_llm.py  test_prompt_builder.py  test_test_generator.py
utils/: helpers.py
