[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project]
name = "friday-cli"
version = "0.1.46"
description = "AI-powered testing agent"
license = "MIT"
readme = "README.md"
keywords = [ "atlassian", "jira", "google", "github", "vertexai", "genai", "chroma", "openai", "cli",]
classifiers = [ "Development Status :: 4 - Beta", "Environment :: Console", "Intended Audience :: Developers", "License :: OSI Approved :: MIT License", "Programming Language :: Python :: 3.12", "Operating System :: OS Independent", "Topic :: Software Development :: Quality Assurance", "Topic :: Software Development :: Testing",]
requires-python = ">=3.12"
dependencies = [ "google-cloud-aiplatform>=1.81.0", "google-genai>=1.2.0", "python-dotenv>=1.0.1", "atlassian-python-api>=3.41.19", "python-json-logger>=3.2.1", "retrying>=1.3.4", "langchain>=0.3.19", "langchain-core>=0.3.37", "langchain-google-genai>=2.0.10", "langchain-community>=0.3.18", "langchain-openai>=0.3.6", "langchain-ollama>=0.2.3", "langchain-mistralai>=0.2.7", "langchain-chroma>=0.2.2", "pygithub>=2.6.1", "chromadb>=0.6.3", "typer>=0.15.1", "fastapi>=0.115.8", "scrapy>=2.12.0", "sentence-transformers>=3.4.1", "jsonschema>=4.23.0", "websocket>=0.2.1", "httpx>=0.28.1", "python-multipart>=0.0.20", "structlog>=25.1.0", "uvicorn[standard]>=0.34.0",]
[[project.authors]]
name = "Dipjyoti Metia"
email = "dipjyotimetia@gmail.com"

[project.optional-dependencies]
dev = [ "pytest>=8.3.4", "pytest-asyncio>=0.23.5",]

[project.urls]
Homepage = "https://github.com/dipjyotimetia/friday"
"Bug Tracker" = "https://github.com/dipjyotimetia/friday/issues"

[project.scripts]
friday = "friday.cli:main"

[tool.poetry]
version = "0.1.47"

[tool.action.branding]
icon = "book-open"
color = "blue"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q"
testpaths = [ "tests",]

[tool.poetry.dependencies.uvicorn]
extras = [ "standard",]
version = "^0.34.0"

[tool.hatch.build.targets.wheel]
packages = [ "src/friday",]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-asyncio = "^0.23.5"
