[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "friday-cli"
version = "0.1.46"
description = "AI-powered testing agent"
license = "MIT"
readme = "README.md"
keywords = [
    "atlassian",
    "jira",
    "google",
    "github",
    "vertexai",
    "genai",
    "chroma",
    "openai",
    "cli",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]
requires-python = ">=3.13"
dependencies = [
    "google-cloud-aiplatform>=1.97.0",
    "google-genai>=1.20.0",
    "python-dotenv>=1.1.0",
    "atlassian-python-api>=4.0.4",
    "python-json-logger>=3.3.0",
    "retrying>=1.3.4",
    "langchain>=0.3.24",
    "langchain-core==0.3.64",
    "langchain-google-genai>=2.1.5",
    "langchain-community>=0.3.24",
    "langchain-openai==0.3.21",
    "langchain-ollama>=0.3.3",
    "langchain-mistralai>=0.2.10",
    "langchain-chroma>=0.2.4",
    "pygithub>=2.6.1",
    "chromadb>=1.0.12",
    "typer>=0.15.1",
    "fastapi>=0.115.9",
    "scrapy>=2.13.2",
    "sentence-transformers>=3.4.1",
    "jsonschema>=4.24.0",
    "websocket>=0.2.1",
    "httpx>=0.28.1",
    "python-multipart>=0.0.20",
    "structlog>=25.4.0",
    "uvicorn[standard]>=0.34.3",
    "pydantic-settings>=2.9.1",
    "browser-use==0.2.7",
    "playwright>=1.48.0",
    "pyyaml>=6.0.2",
]
[[project.authors]]
name = "Dipjyoti Metia"
email = "dipjyotimetia@gmail.com"

[project.urls]
Homepage = "https://github.com/dipjyotimetia/friday"
"Bug Tracker" = "https://github.com/dipjyotimetia/friday/issues"

[project.scripts]
friday = "friday.cli:main"

[tool.action.branding]
icon = "book-open"
color = "blue"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning:github.*",
    "ignore::DeprecationWarning:httpx.*"
]

[tool.hatch.build.targets.wheel]
packages = ["src/friday"]

[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.1",
    "pip-audit>=2.8.0",
]
