[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "friday-cli"
version = "0.1.46"
description = "AI-powered testing agent"
license = "MIT"
readme = "README.md"
keywords = [
    "atlassian",
    "jira",
    "google",
    "github",
    "vertexai",
    "genai",
    "chroma",
    "openai",
    "cli",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]
requires-python = ">=3.13"
dependencies = [
    "google-cloud-aiplatform>=1.102.0",
    "google-genai>=1.25.0",
    "python-dotenv>=1.1.1",
    "atlassian-python-api>=4.0.4",
    "python-json-logger>=3.3.0",
    "retrying>=1.4.0",
    "langchain>=0.3.26",
    "langchain-core>=0.3.68",
    "langchain-google-genai>=2.1.7",
    "langchain-community>=0.3.27",
    "langchain-openai>=0.3.27",
    "langchain-ollama>=0.3.4",
    "langchain-mistralai>=0.2.11",
    "langchain-chroma>=0.2.4",
    "pygithub>=2.6.1",
    "chromadb>=1.0.15",
    "typer>=0.16.0",
    "fastapi>=0.116.0",
    "scrapy>=2.13.3",
    "sentence-transformers>=5.0.0",
    "jsonschema>=4.24.0",
    "websocket>=0.2.1",
    "httpx>=0.28.1",
    "python-multipart>=0.0.20",
    "structlog>=25.4.0",
    "uvicorn[standard]>=0.35.0",
    "pydantic-settings>=2.10.1",
    "browser-use>=0.5.3",
    "playwright>=1.53.0",
    "pyyaml>=6.0.2",
]
[[project.authors]]
name = "Dipjyoti Metia"
email = "dipjyotimetia@gmail.com"

[project.urls]
Homepage = "https://github.com/dipjyotimetia/friday"
"Bug Tracker" = "https://github.com/dipjyotimetia/friday/issues"

[project.scripts]
friday = "friday.cli:main"

[tool.action.branding]
icon = "book-open"
color = "blue"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning:github.*",
    "ignore::DeprecationWarning:httpx.*"
]

[tool.hatch.build.targets.wheel]
packages = ["src/friday"]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=6.2.1",
    "httpx>=0.28.1",
    "pip-audit>=2.9.0",
]
